--- a/power her.html
+++ b/power her.html
@@ -387,6 +387,142 @@
             gap: 10px;
         }
 
+        /* Registration Section */
+        .register-section {
+            background: rgba(76, 175, 80, 0.1);
+            border-radius: 20px;
+            padding: 60px 50px;
+            margin: 80px 0;
+            text-align: center;
+            border: 1px solid rgba(76, 175, 80, 0.3);
+        }
+
+        .register-section h2 {
+            font-size: 36px;
+            margin-bottom: 20px;
+            color: #4CAF50;
+        }
+
+        .register-section p {
+            font-size: 18px;
+            max-width: 800px;
+            margin: 0 auto 40px;
+            color: #d0d0d0;
+            line-height: 1.6;
+        }
+
+        .register-button {
+            background: linear-gradient(90deg, #4CAF50, #2E7D32);
+            color: white;
+            border: none;
+            padding: 18px 35px;
+            font-size: 20px;
+            border-radius: 50px;
+            cursor: pointer;
+            transition: transform 0.3s, box-shadow 0.3s;
+            box-shadow: 0 5px 15px rgba(76, 175, 80, 0.4);
+            margin: 10px;
+        }
+
+        .register-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 20px rgba(76, 175, 80, 0.6);
+        }
+
+        /* Registration Page Styles */
+        .registration-page {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            z-index: 2000;
+            overflow-y: auto;
+            padding: 20px;
+        }
+
+        .registration-container {
+            max-width: 600px;
+            margin: 50px auto;
+            background: rgba(30, 30, 46, 0.95);
+            border-radius: 20px;
+            padding: 40px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            position: relative;
+        }
+
+        .close-btn {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background: none;
+            border: none;
+            color: #b0b0b0;
+            font-size: 24px;
+            cursor: pointer;
+            transition: color 0.3s;
+        }
+
+        .close-btn:hover {
+            color: #ff4081;
+        }
+
+        .registration-container h2 {
+            font-size: 32px;
+            margin-bottom: 30px;
+            text-align: center;
+            color: #4CAF50;
+        }
+
+        .form-group {
+            margin-bottom: 25px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 8px;
+            color: #b0b0b0;
+            font-size: 16px;
+        }
+
+        .form-group input,
+        .form-group select {
+            width: 100%;
+            padding: 15px;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 10px;
+            color: #f0f0f0;
+            font-size: 16px;
+            transition: border-color 0.3s;
+        }
+
+        .form-group input:focus,
+        .form-group select:focus {
+            outline: none;
+            border-color: #4CAF50;
+        }
+
+        .submit-btn {
+            width: 100%;
+            background: linear-gradient(90deg, #4CAF50, #2E7D32);
+            color: white;
+            border: none;
+            padding: 18px;
+            font-size: 18px;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: transform 0.3s, box-shadow 0.3s;
+            margin-top: 20px;
+        }
+
+        .submit-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 5px 15px rgba(76, 175, 80, 0.4);
+        }
+
         footer {
             text-align: center;
             padding: 40px 0;
@@ -506,7 +642,8 @@
             }
 
             .cta-button,
-            .secondary-button {
+            .secondary-button,
+            .register-button {
                 padding: 15px 25px;
                 font-size: 18px;
             }
@@ -514,6 +651,11 @@
             .emergency-btn {
                 width: 140px;
                 height: 140px;
+            }
+
+            .registration-container {
+                padding: 30px 20px;
+                margin: 20px auto;
             }
         }
     </style>
@@ -704,6 +846,16 @@
             </div>
         </section>
 
+        <!-- Registration Section -->
+        <section class="register-section">
+            <h2>Join the Power Her Community</h2>
+            <p>Register now to access exclusive features, connect with our safety community, and get personalized safety
+                recommendations. Your information is secure and protected.</p>
+            <button class="register-button" id="registerBtn">
+                <i class="fas fa-user-plus"></i> Register Now
+            </button>
+        </section>
+
         <footer>
             <p>Power Her - Women Safety App &copy; 2023. All rights reserved.</p>
             <div class="footer-links">
@@ -720,6 +872,59 @@
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
             </div>
         </footer>
+    </div>
+
+    <!-- Registration Page -->
+    <div class="registration-page" id="registrationPage">
+        <div class="registration-container">
+            <button class="close-btn" id="closeRegistrationBtn">
+                <i class="fas fa-times"></i>
+            </button>
+            <h2>Create Your Account</h2>
+            <form id="registrationForm">
+                <div class="form-group">
+                    <label for="fullName">Full Name</label>
+                    <input type="text" id="fullName" name="fullName" placeholder="Enter your full name" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="phoneNumber">Phone Number</label>
+                    <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="Enter your phone number"
+                        required>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" name="email" placeholder="Enter your email address" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="age">Age</label>
+                    <input type="number" id="age" name="age" min="16" max="100" placeholder="Enter your age" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="place">City/Place</label>
+                    <input type="text" id="place" name="place" placeholder="Enter your city or place" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="emergencyContact">Emergency Contact</label>
+                    <input type="tel" id="emergencyContact" name="emergencyContact"
+                        placeholder="Emergency contact number" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="password">Create Password</label>
+                    <input type="password" id="password" name="password" placeholder="Create a strong password"
+                        required>
+                </div>
+
+                <button type="submit" class="submit-btn">
+                    <i class="fas fa-user-plus"></i> Create Account
+                </button>
+            </form>
+        </div>
     </div>
 
     <div class="toast" id="toast"></div>
@@ -831,6 +1036,36 @@
             }, 4000);
         }
 
+        // Handle registration form
+        function handleRegistration(event) {
+            event.preventDefault();
+
+            // Get form data
+            const formData = new FormData(event.target);
+            const userData = Object.fromEntries(formData);
+
+            // Show loading state
+            const submitBtn = event.target.querySelector('.submit-btn');
+            const originalText = submitBtn.innerHTML;
+            submitBtn.innerHTML = '<div class="loading"></div> Creating Account...';
+
+            // Simulate API call
+            setTimeout(() => {
+                // In a real app, you would send this data to a server
+                console.log('User registration data:', userData);
+
+                // Show success message
+                showToast('✅ Account created successfully! Welcome to Power Her!');
+
+                // Reset form and close registration page
+                event.target.reset();
+                document.getElementById('registrationPage').style.display = 'none';
+
+                // Restore button text
+                submitBtn.innerHTML = originalText;
+            }, 2000);
+        }
+
         // Initialize the app
         document.addEventListener('DOMContentLoaded', function () {
             createStars();
@@ -856,6 +1091,19 @@
             // Add click event to update location button
             document.getElementById('updateLocationBtn').addEventListener('click', updateLocation);
 
+            // Add click event to register button
+            document.getElementById('registerBtn').addEventListener('click', function () {
+                document.getElementById('registrationPage').style.display = 'block';
+            });
+
+            // Add click event to close registration page
+            document.getElementById('closeRegistrationBtn').addEventListener('click', function () {
+                document.getElementById('registrationPage').style.display = 'none';
+            });
+
+            // Add form submission handler
+            document.getElementById('registrationForm').addEventListener('submit', handleRegistration);
+
             // Add keyboard shortcuts for emergency actions
             document.addEventListener('keydown', function (e) {
                 // Press 'E' for emergency alert
@@ -865,6 +1113,10 @@
                 // Press 'L' for location sharing
                 if (e.key === 'l' || e.key === 'L') {
                     handleEmergencyAction('location');
+                }
+                // Press 'Escape' to close registration page
+                if (e.key === 'Escape') {
+                    document.getElementById('registrationPage').style.display = 'none';
                 }
             });
 
